--- a/data/gis/Plant_Data_Home.qmd
+++ b/data/gis/Plant_Data_Home.qmd
@@ -32,7 +32,7 @@
     </spatialrefsys>
   </crs>
   <extent>
-    <spatial dimensions="2" maxx="0" maxy="0" maxz="0" minx="0" crs="" minz="0" miny="0"/>
+    <spatial maxy="0" crs="" minz="0" miny="0" minx="0" maxx="0" dimensions="2" maxz="0"/>
     <temporal>
       <period>
         <start></start>
