--- a/data/gis/Averley/Plant_Data_AV_Park.qmd
+++ b/data/gis/Averley/Plant_Data_AV_Park.qmd
@@ -32,7 +32,7 @@
     </spatialrefsys>
   </crs>
   <extent>
-    <spatial minx="0" minz="0" dimensions="2" maxx="0" crs="" maxy="0" maxz="0" miny="0"/>
+    <spatial crs="" maxx="0" dimensions="2" minz="0" maxz="0" maxy="0" miny="0" minx="0"/>
     <temporal>
       <period>
         <start></start>
