--- a/data/gis/Averley/Planting_Data_AV_Park.qmd
+++ b/data/gis/Averley/Planting_Data_AV_Park.qmd
@@ -32,7 +32,7 @@
     </spatialrefsys>
   </crs>
   <extent>
-    <spatial minz="0" dimensions="2" maxy="0" minx="0" crs="" maxx="0" maxz="0" miny="0"/>
+    <spatial crs="" maxx="0" dimensions="2" minz="0" maxz="0" maxy="0" miny="0" minx="0"/>
     <temporal>
       <period>
         <start></start>
